<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="app_name">Olog</string>
    <string name="action_filter">Filter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="tag_prompt">Tags:</string>
    <string name="start_prompt">Start Time:</string>
    <string name="end_prompt">End Time:</string>
    <string name="search_result">Search Results:</string>
    <string name="action_refresh">Refresh</string>
    <string name="navigation_next_item">Next</string>
    <string name="navigation_previous_item">Previous</string>
    <string name="desc_label">Body:</string>
    <string name="tag_label">Tags:</string>
    <string name="logbook_label">Logbook(s):</string>
    <string name="cancel_txt">cancel</string>
    <string name="submit_lbl">Submit</string>
    <string name="cancel_label">Cancel</string>
    <string name="blank_space"></string>
    <string name="tag_hint">loto, operations, etc...</string>
</resources>