<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/logbook_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logbook_label" />
    
     <Spinner 
        android:id="@+id/logbook_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tag_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_label" />

    <EditText
        android:id="@+id/tag_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tag_hint" />

    <TextView
        android:id="@+id/desc_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_label" />

    <EditText
        android:id="@+id/desc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3.46"
        android:ems="10"
        android:hint="@string/app_name"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/blank_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/blank_space" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_lbl" />
    </LinearLayout>

</TableLayout>